[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hacvt"
version = "0.1.0"
description = "HAC-VT: Hybrid Adaptive Calibration sentiment model (neg/neu/pos) with negation handling."
authors = [{name = "Chukwunonso Henry Eze"}]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "nltk>=3.8",
  "textblob>=0.17",
  "vaderSentiment>=3.3.2"
]

[project.urls]
Homepage = "https://github.com/your-username/hacvt"

# ----------------------------
# IMPORTANT: Tell setuptools what to package
# ----------------------------
[tool.setuptools]
packages = ["hacvt"]
include-package-data = false
